--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div id="deneme" style="width: 100%; height: 400px;" ></div>
+
+   <p style="text-align: center;"> TÜTKİYE İLLERİ 6-15 MART TARİHLERİ ARASI CORONA VİRUS SAYILARI (100000%)</p>
+<div id="deneme" style="width: 100%; height: 800px;" ></div>
 
 
 
 
-
+<script src="jquery-3.5.1.min.js"></script>
 <script src="echarts.min.js"></script>
 <script src="main.js"></script>
 
