risk tablosu güncellendi

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-   <p style="text-align: center;"> TÜTKİYE İLLERİ 6-15 MART TARİHLERİ ARASI CORONA VİRUS SAYILARI (100000%)</p>
+   <p style="text-align: center;"> TÜRKİYE İLLER 15-20  MART TARİHLERİ ARASI COVİT19 RİSK HARİTASI</p>
 <div id="deneme" style="width: 100%; height: 800px;" ></div>
 
 
@@ -10,7 +10,9 @@
 
 <script src="jquery-3.5.1.min.js"></script>
 <script src="echarts.min.js"></script>
-<script src="main.js"></script>
+
+<script src="mainn.js"></script>
+
 
 
 </body>
